Disable unique client IPs - all-time chart by default

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -160,7 +160,7 @@
 	ports chart = yes
 	IP versions chart = yes
 	unique client IPs - current poll chart = yes
-	unique client IPs - all-time chart = yes
+	unique client IPs - all-time chart = no
 	http request methods chart = yes
 	http protocol versions chart = yes
 	bandwidth chart = yes
@@ -208,7 +208,7 @@
 	ports chart = yes
 	IP versions chart = yes
 	unique client IPs - current poll chart = yes
-	unique client IPs - all-time chart = yes
+	unique client IPs - all-time chart = no
 	http request methods chart = yes
 	http protocol versions chart = yes
 	bandwidth chart = yes
