--- a/health/health.d/windows.conf
+++ b/health/health.d/windows.conf
@@ -40,7 +40,7 @@ component: Memory
 ## Network
 
  template: windows_inbound_packets_discarded
-       on: windows.net_discarded
+       on: windows.net_nic_discarded
     class: Errors
      type: Windows
 component: Network
@@ -55,7 +55,7 @@ component: Network
        to: sysadmin
 
  template: windows_outbound_packets_discarded
-       on: windows.net_discarded
+       on: windows.net_nic_discarded
     class: Errors
      type: Windows
 component: Network
@@ -70,7 +70,7 @@ component: Network
        to: sysadmin
 
  template: windows_inbound_packets_errors
-       on: windows.net_errors
+       on: windows.net_nic_errors
     class: Errors
      type: Windows
 component: Network
@@ -85,7 +85,7 @@ component: Network
        to: sysadmin
 
  template: windows_outbound_packets_errors
-       on: windows.net_errors
+       on: windows.net_nic_errors
     class: Errors
      type: Windows
 component: Network
@@ -103,7 +103,7 @@ component: Network
 ## Disk
 
  template: windows_disk_in_use
-       on: windows.logical_disk_utilization
+       on: windows.logical_disk_space_usage
     class: Utilization
      type: Windows
 component: Disk
