--- a/integrations/categories.yaml
+++ b/integrations/categories.yaml
@@ -2,250 +2,250 @@ data-collection:
   - id: containers-and-vms
     parent: data-collection
     name: Containers and VMs
-    description: ''
+    description: ""
     most-popular: false
   - id: database-servers
     parent: data-collection
     name: Database Servers
-    description: ''
+    description: ""
     most-popular: false
   - id: kubernetes
     parent: data-collection
     name: Kubernetes
-    description: ''
+    description: ""
     most-popular: false
   - id: service-discovery-registry
     parent: data-collection
     name: Service Discovery / Registry
-    description: ''
+    description: ""
     most-popular: false
   - id: web-servers-and-web-proxies
     parent: data-collection
     name: Web Servers and Web Proxies
-    description: ''
+    description: ""
     most-popular: false
   - id: cloud-provider-managed
     parent: data-collection
     name: Cloud Provider Managed
-    description: ''
+    description: ""
     most-popular: false
   - id: windows-systems
     parent: data-collection
     name: Windows Systems
-    description: ''
+    description: ""
     most-popular: false
   - id: apm
     parent: data-collection
     name: APM
-    description: ''
+    description: ""
     most-popular: false
   - id: hardware-devices-and-sensors
     parent: data-collection
     name: Hardware Devices and Sensors
-    description: ''
+    description: ""
     most-popular: false
   - id: macos-systems
     parent: data-collection
     name: macOS Systems
-    description: ''
+    description: ""
     most-popular: false
   - id: message-brokers
     parent: data-collection
     name: Message Brokers
-    description: ''
+    description: ""
     most-popular: false
   - id: provisioning-systems
     parent: data-collection
     name: Provisioning Systems
-    description: ''
+    description: ""
     most-popular: false
   - id: search-engines
     parent: data-collection
     name: Search Engines
-    description: ''
+    description: ""
     most-popular: false
   - id: linux-systems
     parent: data-collection
     name: Linux Systems
-    description: ''
+    description: ""
     most-popular: false
   - id: notifications
     parent: data-collection
     name: Notifications
-    description: ''
+    description: ""
     most-popular: false
   - id: networking-stack-and-network-interfaces
     parent: data-collection
     name: Networking Stack and Network Interfaces
-    description: ''
+    description: ""
     most-popular: false
   - id: cloud-provider
     parent: data-collection
     name: Cloud Provider
-    description: ''
+    description: ""
     most-popular: false
   - id: synthetic-checks
     parent: data-collection
     name: Synthetic Checks
-    description: ''
+    description: ""
     most-popular: false
   - id: storage-mount-points-and-filesystems
     parent: data-collection
     name: Storage Mount Points and Filesystems
-    description: ''
+    description: ""
     most-popular: false
   - id: containers-vms
     parent: data-collection
     name: Containers & VMs
-    description: ''
+    description: ""
     most-popular: false
   - id: ci-cd-systems
     parent: data-collection
     name: CI/CD Systems
-    description: ''
+    description: ""
     most-popular: false
   - id: ups
     parent: data-collection
     name: UPS
-    description: ''
+    description: ""
     most-popular: false
   - id: freebsd-systems
     parent: data-collection
     name: FreeBSD Systems
-    description: ''
+    description: ""
     most-popular: false
   - id: logs-servers
     parent: data-collection
     name: Logs Servers
-    description: ''
+    description: ""
     most-popular: false
   - id: security-systems
     parent: data-collection
     name: Security Systems
-    description: ''
+    description: ""
     most-popular: false
   - id: observability
     parent: data-collection
     name: Observability
-    description: ''
+    description: ""
     most-popular: false
   - id: gaming
     parent: data-collection
     name: Gaming
-    description: ''
+    description: ""
     most-popular: false
   - id: iot-devices
     parent: data-collection
     name: IoT Devices
-    description: ''
+    description: ""
     most-popular: false
   - id: media-streaming-servers
     parent: data-collection
     name: Media Streaming Servers
-    description: ''
+    description: ""
     most-popular: false
   - id: authentication-and-authorization
     parent: data-collection
     name: Authentication and Authorization
-    description: ''
+    description: ""
     most-popular: false
   - id: project-management
     parent: data-collection
     name: Project Management
-    description: ''
+    description: ""
     most-popular: false
   - id: application-servers
     parent: data-collection
     name: Application Servers
-    description: ''
+    description: ""
     most-popular: false
   - id: export
     parent: data-collection
     name: Export
-    description: ''
+    description: ""
     most-popular: false
   - id: dns-and-dhcp-servers
     parent: data-collection
     name: DNS and DHCP Servers
-    description: ''
+    description: ""
     most-popular: false
   - id: mail-servers
     parent: data-collection
     name: Mail Servers
-    description: ''
+    description: ""
     most-popular: false
   - id: processes-and-system-services
     parent: data-collection
     name: Processes and System Services
-    description: ''
+    description: ""
     most-popular: false
   - id: storage-mount-points-and-filesystems
     parent: data-collection
     name: Storage, Mount Points and Filesystems
-    description: ''
+    description: ""
     most-popular: false
   - id: systemd
     parent: data-collection
     name: Systemd
-    description: ''
+    description: ""
     most-popular: false
   - id: telephony-servers
     parent: data-collection
     name: Telephony Servers
-    description: ''
+    description: ""
     most-popular: false
   - id: vpns
     parent: data-collection
     name: VPNs
-    description: ''
+    description: ""
     most-popular: false
   - id: blockchain-servers
     parent: data-collection
     name: Blockchain Servers
-    description: ''
+    description: ""
     most-popular: false
   - id: distributed-computing-systems
     parent: data-collection
     name: Distributed Computing Systems
-    description: ''
+    description: ""
     most-popular: false
   - id: generic-data-collection
     parent: data-collection
     name: Generic Data Collection
-    description: ''
+    description: ""
     most-popular: false
   - id: p2p
     parent: data-collection
     name: P2P
-    description: ''
+    description: ""
     most-popular: false
   - id: snmp-and-networked-devices
     parent: data-collection
     name: SNMP and Networked Devices
-    description: ''
+    description: ""
     most-popular: false
   - id: system-clock-and-ntp
     parent: data-collection
     name: System Clock and NTP
-    description: ''
+    description: ""
     most-popular: false
   - id: nas
     parent: data-collection
     name: NAS
-    description: ''
+    description: ""
     most-popular: false
   - id: api-gateways
     parent: data-collection
     name: API Gateways
-    description: ''
+    description: ""
     most-popular: false
   - id: task-queues
     parent: data-collection
     name: Task Queues
-    description: ''
+    description: ""
     most-popular: false
   - id: ftp-servers
     parent: data-collection
     name: FTP Servers
-    description: ''
+    description: ""
     most-popular: false
