--- a/collectors/python.d.plugin/megacli/metadata.yaml
+++ b/collectors/python.d.plugin/megacli/metadata.yaml
@@ -9,9 +9,7 @@ meta:
     icon_filename: ''
   related_resources:
     integrations:
-      list:
-        - plugin_name: ''
-          module_name: ''
+      list: []
   info_provided_to_referring_integrations:
     description: ''
   keywords: []
@@ -35,9 +33,7 @@ overview:
       description: ''
 setup:
   prerequisites:
-    list:
-      - title: ''
-        description: ''
+    list: []
   configuration:
     file:
       name: ''
@@ -47,26 +43,15 @@ setup:
       folding:
         title: ''
         enabled: true
-      list:
-        - name: ''
-          default_value: ''
-          description: ''
-          required: false
+      list: []
     examples:
       folding:
         enabled: true
         title: ''
-      list:
-        - name: ''
-          folding:
-            enabled: false
-          description: ''
-          config: ''
+      list: []
 troubleshooting:
   problems:
-    list:
-      - name: ''
-        description: ''
+    list: []
 alerts:
   - name: megacli_adapter_state
     link: https://github.com/netdata/netdata/blob/master/health/health.d/megacli.conf
