--- a/collectors/ebpf.plugin/multi_metadata.yaml
+++ b/collectors/ebpf.plugin/multi_metadata.yaml
@@ -707,7 +707,7 @@ modules:
         list: []
     alerts:
       - name: sync_freq
-        link: 
+        link: |
           https://github.com/netdata/netdata/blob/master/health/health.d/synchronization.conf
         metric: mem.sync
         info: number of sync() system calls. Every call causes all pending modifications
