--- a/health/health.d/apps.conf
+++ b/health/health.d/apps.conf
@@ -12,5 +12,5 @@ component: Process
     every: 1m
      warn: $this > (($status >= $WARNING)  ? (85) : (90))
     delay: down 15m multiplier 1.5 max 1h
-     info: maximum FS utilization among all application group PIDs
+     info: maximum FD utilization among all application group PIDs
        to: sysadmin
