--- a/integrations/categories.yaml
+++ b/integrations/categories.yaml
@@ -26,6 +26,7 @@
       name: Other
       description: ""
       most-popular: false
+      children: []
     - id: data-collection.containers-and-vms
       name: Containers and VMs
       description: ""
