Rename FLB_GENERIC collector to FLB_TAIL.

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -7,7 +7,7 @@
 #
 # [LOG SOURCE NAME]
 # 	enabled = yes
-# 	log type = flb_generic
+# 	log type = flb_tail
 #
 # For a list of all available log types, see:
 # https://github.com/netdata/netdata/blob/master/logsmanagement/README.md#types-of-available-collectors
@@ -225,7 +225,7 @@
 
 	## Required settings
 	enabled = yes
-	log type = flb_generic
+	log type = flb_tail
 
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents in netdata.conf.
@@ -319,7 +319,7 @@
 
 	## Required settings
 	enabled = yes
-	log type = flb_generic
+	log type = flb_tail
 
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents in netdata.conf.
@@ -377,7 +377,7 @@
 
 	## Required settings
 	enabled = no
-	log type = flb_generic
+	log type = flb_tail
 
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents in netdata.conf.
@@ -423,7 +423,7 @@
 
 	## Required settings
 	enabled = no
-	log type = flb_generic
+	log type = flb_tail
 
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents in netdata.conf.
@@ -660,7 +660,7 @@
 
 	## Required settings
 	enabled = no
-	log type = flb_generic
+	log type = flb_tail
 
 	## Optional settings, common to all log source. 
 	## Uncomment to override global equivalents in netdata.conf.
