Switch 'Netdata fluentbit.log' to disabled by default

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -318,7 +318,7 @@
 	## embedded Fluent Bit's logs
 
 	## Required settings
-	enabled = yes
+	enabled = no
 	log type = flb_tail
 
 	## Optional settings, common to all log source. 
