Add 'use inotify' configuration option

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -145,12 +145,16 @@
 	## log path = /var/log/apache2/access.log
 	## See README for more information on 'log path = auto' option
 	log path = auto
+
+	## Use inotify instead of file stat watcher. Set to 'no' to reduce CPU usage.
+	use inotify = yes
 	
 	## Auto-detect web log format, otherwise it can be set manually, e.g.:
 	## log format = %h %l %u %t "%r" %>s %b "%{Referer}i" "%{User-agent}i"
 	## see https://httpd.apache.org/docs/2.4/logs.html#accesslog
 	log format = auto
 
+	## Detect errors such as illegal port numbers or response codes.
 	verify parsed logs = yes
 
 	## Charts to enable
@@ -197,8 +201,13 @@
 	## See README for more information on 'log path = auto' option
 	log path = auto
 
+	## Use inotify instead of file stat watcher. Set to 'no' to reduce CPU usage.
+	use inotify = yes
+
 	## see https://docs.nginx.com/nginx/admin-guide/monitoring/logging/#setting-up-the-access-log
 	log format = $remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent $request_length $request_time "$http_referer" "$http_user_agent"
+	
+	## Detect errors such as illegal port numbers or response codes.
 	verify parsed logs = yes
 
 	## Charts to enable
@@ -244,6 +253,9 @@
 	## log path = /tmp/netdata/var/log/netdata/error.log
 	## See README for more information on 'log path = auto' option
 	log path = auto
+
+	## Use inotify instead of file stat watcher. Set to 'no' to reduce CPU usage.
+	use inotify = yes
 
 	## Charts to enable
 	# collected logs total chart enable = no
@@ -339,6 +351,9 @@
 	## See README for more information on 'log path = auto' option
 	log path = auto
 
+	## Use inotify instead of file stat watcher. Set to 'no' to reduce CPU usage.
+	use inotify = yes
+
 	## Charts to enable
 	# collected logs total chart enable = no
 	# collected logs rate chart enable = yes
@@ -397,6 +412,9 @@
 	## See README for more information on 'log path = auto' option
 	log path = auto
 
+	## Use inotify instead of file stat watcher. Set to 'no' to reduce CPU usage.
+	use inotify = yes
+
 	# Charts to enable
 	# collected logs total chart enable = no
 	# collected logs rate chart enable = yes
@@ -443,6 +461,9 @@
 	## log path = /var/log/messages
 	## See README for more information on 'log path = auto' option
 	log path = auto
+
+	## Use inotify instead of file stat watcher. Set to 'no' to reduce CPU usage.
+	use inotify = yes
 
 	## Charts to enable
 	# collected logs total chart enable = no
