Add docker event actions metrics

--- a/logsmanagement/logsmanagement.conf
+++ b/logsmanagement/logsmanagement.conf
@@ -106,6 +106,7 @@
 	# collected logs total chart enable = no
 	# collected logs rate chart enable = yes
 	event type chart = yes
+	event action chart = yes
 
 	# Example of how to capture create / attach / die events for a named container:
 	# custom 1 chart = serverA events
